@@ -1,140 +1,138 @@
 package com.bornfire;
-import java.security.*;
-import java.security.KeyStore.*;
-import java.io.*;
-import java.security.cert.CertificateException;
+
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.math.BigInteger;
+import java.security.GeneralSecurityException;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.KeyStore;
+import java.security.NoSuchAlgorithmException;
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.security.SecureRandom;
+import java.security.cert.Certificate;
+import java.security.cert.X509Certificate;
 import java.util.Base64;
-import java.util.Enumeration;
+import java.util.Date;
 
 import javax.crypto.Cipher;
 import javax.xml.bind.DatatypeConverter;
 
-import java.nio.charset.*;
-import sun.security.provider.*;
-import  javax.crypto.*;
-
-import java.security.*;
-import java.security.KeyStore.*;
-import java.io.*;
-
-import javax.crypto.Cipher;
-import java.nio.charset.*;
-import sun.security.provider.*;
-import javax.crypto.*;
+import sun.security.x509.AlgorithmId;
+import sun.security.x509.CertificateAlgorithmId;
+import sun.security.x509.CertificateSerialNumber;
+import sun.security.x509.CertificateValidity;
+import sun.security.x509.CertificateVersion;
+import sun.security.x509.CertificateX509Key;
+import sun.security.x509.X500Name;
+import sun.security.x509.X509CertImpl;
+import sun.security.x509.X509CertInfo;
 
 public class Main {
-	static String message = "hello welcome to India";
-
 	
-	//keypair form jks
-		public static KeyPair KeyPairGeneratorFromJkS() throws KeyStoreException, NoSuchAlgorithmException,
-				CertificateException, IOException, UnrecoverableEntryException {
-	       
+	
+	public static void main(String[] args) throws Exception {
+		try {
+			char[] pwdArray = "Passw0rd$".toCharArray();// ->JKS password
+			InputStream ins = new FileInputStream(
+					"C:\\softlib\\Certificates\\cim_wildcard.jks");
+			KeyStore ks = KeyStore.getInstance(KeyStore.getDefaultType());
+			ks.load(ins, pwdArray);
+			KeyStore.PasswordProtection keyPassword = new KeyStore.PasswordProtection(pwdArray);
+
+			/*KeyPairGenerator keyPairGenerator = KeyPairGenerator.getInstance("RSA");
+			keyPairGenerator.initialize(4096);
+			KeyPair keyPair = keyPairGenerator.generateKeyPair();
+*/
+		//	Certificate[] chain = { generateCertificate("cn=Unknown", keyPair, 365, "SHA256withRSA") };
+
+/*			ks.setKeyEntry("9C20282A-30BB-46E6-AC0F-CF1E61F19233", keyPair.getPrivate(), pwdArray, chain);
+			 FileOutputStream outputStream = new FileOutputStream("C:\\Users\\User\\Desktop\\Certificates\\test1.jks");
+			  ks.store(outputStream, "Test@123".toCharArray());
 			
-			File file = new File("C:\\softlib\\Certificates\\cim_wildcard.jks");
+			System.out.println( "PublicKey:"+Base64.getEncoder().encodeToString(keyPair.getPublic().getEncoded()));
+			System.out.println("Private Key:"+ Base64.getEncoder().encodeToString(keyPair.getPrivate().getEncoded()));
+*/
+			KeyStore.PrivateKeyEntry privateKeyEntry = (KeyStore.PrivateKeyEntry) ks.getEntry("32303a73-3696-5b6c-a3bd-c8b0b172eb2c", keyPassword);
+			Certificate origCert = privateKeyEntry.getCertificate();
+			PublicKey publickey = origCert.getPublicKey();
 
-			InputStream ins = new FileInputStream("C:\\softlib\\Certificates\\cim_wildcard.jks");
-			String alias = "";
-			String pass = "Passw0rd$";
+			PrivateKey privateKey = privateKeyEntry.getPrivateKey();
 			
+			System.out.println( "PublicKey:"+Base64.getEncoder().encodeToString(publickey.getEncoded()));
+			System.out.println("Private Key:"+ Base64.getEncoder().encodeToString(privateKey.getEncoded()));
 			
-		       
-		        
-			KeyStore keyStore = KeyStore.getInstance(KeyStore.getDefaultType());
-			keyStore.load(ins, pass.toCharArray());
-			 Enumeration<String> enumeration = keyStore.aliases();
-		        while(enumeration.hasMoreElements()) {
-		             alias = enumeration.nextElement();
-		            System.out.println("alias name: " + alias);
-		            
-		            
-
-		        }
-			KeyStore.PasswordProtection keyPassword = new KeyStore.PasswordProtection(pass.toCharArray());
-
-			KeyStore.PrivateKeyEntry privateKeyEntry = (KeyStore.PrivateKeyEntry) keyStore.getEntry(alias, keyPassword);
-
-			java.security.cert.Certificate cert = keyStore.getCertificate(alias);
-			PublicKey publickey = cert.getPublicKey();
-			PrivateKey privatekey = privateKeyEntry.getPrivateKey();
-			return new KeyPair(publickey, privatekey);
-
-		}
-
-	//encrypt
-		public static String encrypt(String plainText, PublicKey publicKey) throws Exception {
-			Cipher c = Cipher.getInstance("RSA");
-			c.init(Cipher.ENCRYPT_MODE, publicKey);
-
-			byte[] encrypyedText = c.doFinal(plainText.getBytes());
-
-			return Base64.getEncoder().encodeToString(encrypyedText);
-		}
-
-	//decrypt
-
-		public static String decrypt(String encrypyedText, PrivateKey privateKey) throws Exception {
-			byte[] encdata = Base64.getDecoder().decode(encrypyedText);
-
-			Cipher c = Cipher.getInstance("RSA");
-			c.init(Cipher.DECRYPT_MODE, privateKey);
-
-			return new String(c.doFinal(encdata));
-		}
-	//Signature
-
-		public static String sign(String plainText, PrivateKey privateKey) throws Exception {
-			Signature privateSignature = Signature.getInstance("SHA256withRSA");
-			privateSignature.initSign(privateKey);
-			privateSignature.update(plainText.getBytes());
-
-			byte[] signature = privateSignature.sign();
-
-			return Base64.getEncoder().encodeToString(signature);
-		}
-	//SignatureVerify
-
-		public static boolean verify(String plainText, String signature, PublicKey publicKey) throws Exception {
-			Signature publicSignature = Signature.getInstance("SHA256withRSA");
-			publicSignature.initVerify(publicKey);
-			publicSignature.update(plainText.getBytes());
-
-			byte[] signatureBytes = Base64.getDecoder().decode(signature);
-
-			return publicSignature.verify(signatureBytes);
-		}
-
-		public static void main(String[] args) throws Exception {
-			
-			 
-		        
-		        
-			System.out.println("Original data : " + message);
-			KeyPair pair = KeyPairGeneratorFromJkS();
-			System.out.println("PUBLIC KEY : " + DatatypeConverter.printHexBinary(pair.getPublic().getEncoded()));
-			String encodedPublicKey = Base64.getEncoder().encodeToString(pair.getPublic().getEncoded());
-			System.out.println("PUBLIC KEY : " + (encodedPublicKey));
-
-
-			System.out.println("PRIVATE KEY : " + DatatypeConverter.printHexBinary(pair.getPrivate().getEncoded()));
-			String encodedPrivateKey = Base64.getEncoder().encodeToString(pair.getPrivate().getEncoded());
-
-			System.out.println("PRIVATE KEY : " + (encodedPrivateKey));
-
-			String EncryptText = encrypt(encodedPrivateKey, pair.getPublic());
+			/*System.out.println(DatatypeConverter.printHexBinary(publickey.getEncoded()));
+			System.out.println(DatatypeConverter.printHexBinary(privateKey.getEncoded()));
+			String message = "hello";
+			String EncryptText = encrypt(message, publickey);
 			System.out.println("Encrypt data : " + EncryptText);
 
-			String decryptText = decrypt(EncryptText, pair.getPrivate());
+			String decryptText = decrypt(EncryptText, privateKey);
 
-			System.out.println("Decrypt data :  " + decryptText);
+			System.out.println("Decrypt data :  " + decryptText);*/
 
-			String signature = sign(message, pair.getPrivate());
-			
-			System.out.println(signature);
-
-			boolean isCorrect = verify(message, signature, pair.getPublic());
-			System.out.println("Signature correct: " + isCorrect);
+		} catch (Exception e) {
+			e.printStackTrace();
 
 		}
+	}
+
+// Certificate Details
+	@SuppressWarnings("restriction")
+	private static X509Certificate generateCertificate(String dn, KeyPair keyPair, int validity, String sigAlgName)
+			throws GeneralSecurityException, IOException {
+		PrivateKey privateKey = keyPair.getPrivate();
+
+		X509CertInfo info = new X509CertInfo();
+
+		Date from = new Date();
+		Date to = new Date(from.getTime() + validity * 1000L * 24L * 60L * 60L);
+
+		CertificateValidity interval = new CertificateValidity(from, to);
+		BigInteger serialNumber = new BigInteger(64, new SecureRandom());
+		X500Name owner = new X500Name(dn);
+		AlgorithmId sigAlgId = new AlgorithmId(AlgorithmId.RSAEncryption_oid);
+
+		info.set(X509CertInfo.VALIDITY, interval);
+		info.set(X509CertInfo.SERIAL_NUMBER, new CertificateSerialNumber(serialNumber));
+		info.set(X509CertInfo.SUBJECT, owner);
+		info.set(X509CertInfo.ISSUER, owner);
+		info.set(X509CertInfo.KEY, new CertificateX509Key(keyPair.getPublic()));
+		info.set(X509CertInfo.VERSION, new CertificateVersion(CertificateVersion.V3));
+		info.set(X509CertInfo.ALGORITHM_ID, new CertificateAlgorithmId(sigAlgId));
+
+		X509CertImpl certificate = new X509CertImpl(info);
+		certificate.sign(privateKey, sigAlgName);
+
+		sigAlgId = (AlgorithmId) certificate.get(X509CertImpl.SIG_ALG);
+		info.set(CertificateAlgorithmId.NAME + "." + CertificateAlgorithmId.ALGORITHM, sigAlgId);
+		certificate = new X509CertImpl(info);
+		certificate.sign(privateKey, sigAlgName);
+
+		return certificate;
+
+	}
+
+	public static String encrypt(String plainText, PublicKey publicKey) throws Exception {
+		Cipher c = Cipher.getInstance("RSA");
+		c.init(Cipher.ENCRYPT_MODE, publicKey);
+
+		byte[] encrypyedText = c.doFinal(plainText.getBytes());
+
+		return Base64.getEncoder().encodeToString(encrypyedText);
+	}
+
+	public static String decrypt(String encrypyedText, PrivateKey privateKey) throws Exception {
+		byte[] encdata = Base64.getDecoder().decode(encrypyedText);
+
+		Cipher c = Cipher.getInstance("RSA");
+		c.init(Cipher.DECRYPT_MODE, privateKey);
+
+		return new String(c.doFinal(encdata));
+	}
 
 }
